feat(security): 展示包查询风险详情
